--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@mantine/core": "^7.13.2",
     "@mantine/hooks": "^7.13.2",
+    "@next/font": "^14.2.14",
     "@tabler/icons-react": "^3.19.0",
     "next": "14.2.14",
     "react": "^18",
